--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,20 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;400;500;300;700;900&display=swap" rel="stylesheet">
-    <title>React Portfolio-Maker</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      *{
-        font-family: 'Roboto', sans-serif;
+      * {
+        font-family: "Roboto", sans-serif;
         margin: 0;
         overflow-x: hidden;
       }
     </style>
+    <title>React Portfolio Website</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
